# reachy_mini_conversation_app

./: .env.example  .gitignore  AGENTS.md  DM_MODE.md  LIGHTING.md  MEMORY_MERGE_PLAN.md  README.md  VISION.md  WS1_CASCADE.md  dev_serve_v2.py  index.html  pr_description.md  pyproject.toml  reachy_mini.code-workspace  summary.json  test_procedure.md  verify_brain_roundtrip.py  verify_dm_behavior.py  verify_tts_voices.py
coverage/: class_index.html  function_index.html  index.html  status.json  z_545d0ca0fcabeb60___init___py.html  z_545d0ca0fcabeb60_base_realtime_py.html  z_545d0ca0fcabeb60_camera_frame_encoding_py.html  z_545d0ca0fcabeb60_config_py.html  z_545d0ca0fcabeb60_console_py.html  z_545d0ca0fcabeb60_conversation_handler_py.html  z_545d0ca0fcabeb60_dance_emotion_moves_py.html  z_545d0ca0fcabeb60_gemini_live_py.html  z_545d0ca0fcabeb60_huggingface_realtime_py.html  z_545d0ca0fcabeb60_idle_policy_py.html  z_545d0ca0fcabeb60_main_py.html  z_545d0ca0fcabeb60_mcp_client_py.html  z_545d0ca0fcabeb60_memory_py.html  z_545d0ca0fcabeb60_moves_py.html  z_545d0ca0fcabeb60_openai_realtime_py.html  z_545d0ca0fcabeb60_personality_py.html  z_545d0ca0fcabeb60_personality_routes_py.html  z_545d0ca0fcabeb60_prompts_py.html  z_545d0ca0fcabeb60_startup_settings_py.html  z_545d0ca0fcabeb60_streaming_py.html  z_545d0ca0fcabeb60_tool_spaces_py.html  z_545d0ca0fcabeb60_utils_py.html  z_9894c718b16fb84e___init___py.html  z_9894c718b16fb84e_background_tool_manager_py.html  z_9894c718b16fb84e_camera_py.html  z_9894c718b16fb84e_core_tools_py.html  z_9894c718b16fb84e_dance_py.html  z_9894c718b16fb84e_forget_py.html  z_9894c718b16fb84e_idle_do_nothing_py.html  z_9894c718b16fb84e_move_head_py.html  z_9894c718b16fb84e_play_emotion_py.html  z_9894c718b16fb84e_remember_py.html  z_9894c718b16fb84e_stop_dance_py.html  z_9894c718b16fb84e_stop_emotion_py.html  z_9894c718b16fb84e_task_cancel_py.html  z_9894c718b16fb84e_task_status_py.html  (+2 more)
docs/: memory-background-dreaming-spec.md  memory-system-design.md
external_content/: mcp_servers.json
history/: history.jsonl
lighting/: ha-scenes.yaml  robot-beats.md  scene-palette.md
modal/: README.md  describe_frame.py  qwen3_tts_modal.py  qwen_brain_modal.py  qwen_omni_modal.py  qwen_vl_modal.py
profiles/default/: tools.txt
profiles/dm/: instructions.txt  tools.txt
profiles/example/: tools.txt
profiles/presentation_demo/: instructions.txt  tools.txt
profiles/smart_home/: instructions.txt  tools.txt
profiles/tedai/: tools.txt
scripts/: deploy_wireless.sh
src/reachy_mini_conversation_app/: base_realtime.py  config.py  console.py  conversation_events.py  conversation_handler.py  events_client.py  events_loop.py  gemini_live.py  gradio_personality.py  headless_personality.py  headless_personality_ui.py  huggingface_realtime.py  main.py  mcp_client.py  mcp_servers.py  moves.py  openai_realtime.py  personality.py  personality_routes.py  prompts.py  skillbooks.py  tool_spaces.py  utils.py
src/reachy_mini_conversation_app/audio/: head_wobbler.py  latency_probe.py
src/reachy_mini_conversation_app/cascade/: CASCADE_CODEBASE.md  cascade.yaml  config.py  handler.py  pipeline.py  provider_factory.py  speech_output.py
src/reachy_mini_conversation_app/cascade/asr/: deepgram.py  nemotron.py  parakeet_nemo_progressive.py  progressive_base.py  voxtral_mlx.py
src/reachy_mini_conversation_app/cascade/llm/: gemini.py  openai.py
src/reachy_mini_conversation_app/cascade/transcript_analysis/: __init__.py  entity.py  loader.py  manager.py
src/reachy_mini_conversation_app/cascade/tts/: __init__.py  elevenlabs.py  kokoro.py  qwen3_tts.py
src/reachy_mini_conversation_app/cascade/vad/: __init__.py  silero.py
src/reachy_mini_conversation_app/memory/: __init__.py  dates.py  dream_scheduler.py  dreamer.py  frontmatter.py  index_renderer.py  memory_manager.py
src/reachy_mini_conversation_app/static/: index.html  main.js  style.css
src/reachy_mini_conversation_app/static/js/: api.js  constants.js  main.js  orb.js  pending-apply.js  personality-badge.js  router.js  ui.js
src/reachy_mini_conversation_app/static/js/components/: profile-modal.js
src/reachy_mini_conversation_app/static/js/views/: home.js  settings.js  talk.js
src/reachy_mini_conversation_app/static_v2/: index.html  style.css
src/reachy_mini_conversation_app/static_v2/js/: api.js  constants.js  conversation-events.js  main.js  orb.js  router.js  ui.js
src/reachy_mini_conversation_app/static_v2/js/components/: custom-profile-modal.js  profile-modal.js
src/reachy_mini_conversation_app/static_v2/js/views/: home.js  settings.js  talk.js
src/reachy_mini_conversation_app/tools/: _discord_common.py  background_tool_manager.py  core_tools.py  dance.py  forget.py  play_emotion.py  read_skill.py  recall_memories.py  recall_memory.py  remember.py  send_discord.py  send_discord_dm.py  sleep_wake.py  tool_constants.py
src/reachy_mini_conversation_app/vision/: local_vision.py  remote_vision.py
src/reachy_mini_conversation_app/vision/head_tracking/: mediapipe.py  yolo.py
tests/: test_config_name_collisions.py  test_console.py  test_events_injection.py  test_gemini_live.py  test_huggingface_realtime.py  test_mcp_client.py  test_mcp_servers.py  test_openai_realtime.py  test_profile_paths.py  test_prompts.py  test_skillbooks.py  test_tool_spaces.py
tests/audio/: test_head_wobbler.py
tests/cascade/: test_cascade.py
tests/memory/: test_dates.py  test_dream_scheduler.py  test_dreamer.py  test_dreamer_integration.py  test_frontmatter.py  test_memory_manager.py  test_tools.py
voices/: README.md  audition_voices.py  character-voices.md  generate_voices.py  tts_server.py
voices/assets/: voices.json
voices/assets/clone_prompts/: augusta_byron.pt  bailey_bigsmile.pt  gm_narrator.pt  hazel_johnson.pt  marvin.pt  npc_merchant.pt  npc_overseer.pt  npc_raider.pt  npc_settler.pt  old_tallman.pt  tommy_doyle.pt
widgets/: charts.json  nav.json  pie_chart.json  search-index.json  statistic.json  timeline.json  tree.json
widgets/default/: nav.json  pie_chart.json  search-index.json  tree.json
