[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_conversation_app"
version = "0.7.0"
authors = [{ name = "Pollen Robotics", email = "contact@pollen-robotics.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    #Media
    "aiortc>=1.13.0",
    "av",
    "fastrtc>=0.0.34",
    "gradio==5.50.1.dev1",
    "huggingface-hub==1.3.0",
    "httpx>=0.28.1",

    #Environment variables
    "python-dotenv",

    #OpenAI
    "openai>=2.30.0",

    #Gemini
    "google-genai>=1.0.0",

    #Reachy mini
    "reachy_mini_dances_library",
    "reachy_mini_toolbox",
    "reachy-mini>=1.8.0",
    "mcp>=1.27.1",

    #Cascade backend — this fork runs the native cascade DM by default (see cascade.yaml).
    #Kept in BASE deps (not only the [cascade] extra) so a no-extras install — e.g. the Reachy
    #app dashboard / app-store `pip install <dir>` — still pulls the cascade runtime, including
    #Silero VAD (torch/torchaudio) and audio (librosa brings soxr for streaming resampling).
    "torch>=2.0",
    "torchaudio>=2.0",
    "librosa>=0.10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
local_vision = [
  "accelerate>=1.13.0",
  "torch>=2.1",
  "transformers==5.3.0",
]
yolo_vision = [
  "ultralytics",
  "supervision<0.28",
  "opencv-python>=4.13.0.92",
]
mediapipe_vision = [
  "mediapipe==0.10.14",
]
all_vision = [
  "accelerate>=1.13.0",
  "torch>=2.1",
  "transformers==5.3.0",
  "ultralytics",
  "supervision<0.28",
  "opencv-python>=4.13.0.92",
  "mediapipe==0.10.14",
]

# Cascade pipeline (ASR -> LLM -> TTS). Base extra is required to run the cascade backend;
# provider extras are opt-in per ASR/LLM/TTS provider selected in cascade.yaml.
# Silero VAD (torch + torchaudio) is always loaded by the cascade handler, so the base
# extra pulls it in; cascade_silero_vad is kept as a standalone alias for clarity.
cascade = ["reachy_mini_conversation_app[cascade_silero_vad]", "librosa>=0.10.0", "pyyaml>=6.0"]
cascade_silero_vad = ["torch>=2.0", "torchaudio>=2.0"]
cascade_parakeet = ["parakeet-mlx>=0.4.0", "ffmpeg-python>=0.2.0"]
# Pinned to the 0.4.1/0.4.2 line: 0.4.0 and earlier force transformers==5.0.0rc3 (breaks the
# vision transformers==5.3.0 pin); 0.4.3+ require transformers>=5.5.0 (same break). 0.4.1/0.4.2
# accept transformers 5.3.0 and only clash with mediapipe (protobuf 6 vs <5) — see conflicts below.
cascade_parakeet_progressive = ["mlx-audio>=0.4.1,<0.4.3"]
cascade_voxtral_mlx = ["mlx-audio>=0.4.1,<0.4.3"]
cascade_nemotron = ["nemo_toolkit[asr]>=2.0"]
cascade_kokoro = ["kokoro>=0.9.4"]
cascade_elevenlabs = ["elevenlabs>=1.0.0"]
cascade_deepgram = ["deepgram-sdk>=3.0.0,<4.0.0"]
cascade_gradium = ["gradium>=0.5.4; python_version>='3.12'"]
cascade_gliner = ["gliner>=0.2.0"]
# Gemini LLM uses google-genai, which is already a core dependency — no extra deps needed.
cascade_all = [
  "reachy_mini_conversation_app[cascade]",
  "reachy_mini_conversation_app[cascade_silero_vad]",
  "reachy_mini_conversation_app[cascade_parakeet]",
  "reachy_mini_conversation_app[cascade_parakeet_progressive]",
  "reachy_mini_conversation_app[cascade_voxtral_mlx]",
  "reachy_mini_conversation_app[cascade_nemotron]",
  "reachy_mini_conversation_app[cascade_kokoro]",
  "reachy_mini_conversation_app[cascade_elevenlabs]",
  "reachy_mini_conversation_app[cascade_deepgram]",
]
# Note: cascade_gradium excluded from cascade_all because gradium requires Python >=3.12

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff==0.12.0",
  "mypy==1.18.2",
  "pre-commit",
  "types-PyYAML",
]

[project.scripts]
reachy-mini-conversation-app = "reachy_mini_conversation_app.main:main"

[tool.uv]
exclude-newer = "7 days"
# The MLX cascade ASR extras (mlx-audio 0.4.1/0.4.2) depend on protobuf>=6, while mediapipe
# pins protobuf<5 — an irreducible clash (no mlx-audio version satisfies both). mlx-audio is
# otherwise compatible with the rest of the vision stack (yolo, local_vision/transformers 5.3.0),
# so only the mediapipe-bearing extras (mediapipe_vision and all_vision, which bundles it) are
# mutually exclusive with MLX ASR. MLX ASR + yolo head-tracking is the canonical combo and resolves.
conflicts = [
  [{ extra = "all_vision" }, { extra = "cascade_parakeet_progressive" }],
  [{ extra = "all_vision" }, { extra = "cascade_voxtral_mlx" }],
  [{ extra = "all_vision" }, { extra = "cascade_all" }],
  [{ extra = "mediapipe_vision" }, { extra = "cascade_parakeet_progressive" }],
  [{ extra = "mediapipe_vision" }, { extra = "cascade_voxtral_mlx" }],
  [{ extra = "mediapipe_vision" }, { extra = "cascade_all" }],
]

[tool.uv.exclude-newer-package]
"reachy-mini" = false
"reachy-mini-dances-library" = false
"reachy-mini-toolbox" = false

[project.entry-points."reachy_mini_apps"]
reachy_mini_conversation_app = "reachy_mini_conversation_app.main:ReachyMiniConversationApp"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reachy_mini_conversation_app = [
  "images/*",
  "static/*",
  ".env.example",
  "demos/**/*.txt",
  "prompts_library/*.txt",
  "prompts/**/*.txt",
  "cascade/*.yaml",
]
reachy_talk_data = [
  "profiles/**/*.txt",
  "profiles/**/*.py",
]

[tool.ruff]
line-length = 119
exclude = [".venv", "dist", "build", "**/__pycache__", "*.egg-info", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
]
ignore = [
  "E501",  # handled by formatter
  "D100",  # ignore missing module docstrings
  "D203",  # blank line before class docstring (conflicts with D211)
  "D213",  # summary on second line (conflicts with D212)
]

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
no-lines-before = ["standard-library", "local-folder"]
known-local-folder = ["reachy_mini_conversation_app"]
known-first-party = ["reachy_mini", "reachy_mini_dances_library", "reachy_mini_toolbox"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
files = ["src/"]
ignore_missing_imports = true
strict = true
show_error_codes = true
warn_unused_ignores = true
